--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+* {
+    color:rgb(39, 56, 150);
+}
+
 body {
     position: relative;
 }
@@ -38,6 +42,24 @@ body {
     margin-top: 150px;
 }
 
+.topo {
+    width: 50px;
+    height: 50px;
+    border-radius: 3px;
+    background:rgb(0, 165, 255);
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    text-align: center;
+    color:rgb(248, 249, 250);
+    font-size: 40px;
+    opacity: 30%;
+    transition: 0.5s;
+}
+
+.topo:hover {
+    opacity: 100%;
+}
 /* inicio menu responsivo
 @media(max-width:800px){
     .scroll {
