--- a/style.css
+++ b/style.css
@@ -8,18 +8,22 @@ body {
 
 .bloco {
     width: 100%;
-    height: 80px;
+    height: 90px;
     margin-top: -150px;
     border: 1px rgb(39, 56, 150) solid;
-    background: rgb(0, 165, 255);
+    background: url("img/fundo.jpg");
+    background-size: cover;
     box-shadow: 0px 0px 10px rgba(39, 56, 150, 0.5);
+    font-size: 13px;
+    font-family: "Cooper Black";
     border-radius: 3px;
     position: fixed;
 }
 
 .logo {
-	width: 20%;
-    margin: 0px auto;
+    width: 130px;
+	margin: 0px auto;
+    text-align: center;
 }
 
 #main {
@@ -30,12 +34,18 @@ body {
 
 #navbar-example {
     margin-top: -65px;
-    width: 90%;
+    width: 50%;
+    margin-left: 20%;
     border: 1px rgb(39, 56, 150) solid;
     background: rgb(248, 249, 250);
     box-shadow: 0px 0px 10px rgba(39, 56, 150, 0.5);
+    justify-content: space-evenly;
     border-radius: 3px;
     position: fixed;
+}
+
+h4 {
+    text-align: center;
 }
 
 .textScroll {
@@ -65,7 +75,6 @@ body {
     .scroll {
        width: 100%;
     }
-
     nav {
         justify-content: space-evenly;
         border: 1px black solid;
