--- a/style.css
+++ b/style.css
@@ -33,15 +33,38 @@ body {
 }
 
 #navbar-example {
-    margin-top: -65px;
-    width: 50%;
-    margin-left: 20%;
-    border: 1px rgb(39, 56, 150) solid;
-    background: rgb(248, 249, 250);
-    box-shadow: 0px 0px 10px rgba(39, 56, 150, 0.5);
+    margin-top: 30px;
+    width: 370px;
+    left: 5px;
     justify-content: space-evenly;
     border-radius: 3px;
     position: fixed;
+    z-index: 20;
+}
+
+@mixin list-group-item-variant($state, $background, $color) {
+    .list-group-item-#{$background} {
+      color: $red;
+      background-color: $red;
+  
+      &.list-group-item-action {
+        &:hover,
+        &:focus {
+          color: $white;
+          background-color: $rgb(39, 56, 150);
+        }
+  
+        &.active {
+          color: $white;
+          background-color: $rgb(39, 56, 150);
+          border-color: $none;
+        }
+      }
+    }
+  }
+
+.list-group {
+    text-align: center;
 }
 
 h4 {
@@ -70,6 +93,69 @@ h4 {
 .topo:hover {
     opacity: 100%;
 }
+
+/* Menu */
+.menu {
+    width: 20px;
+    height: 530px;
+    margin-top: -60px;
+    position: relative;
+    float: left;
+    position: fixed;
+}
+  
+.menu label {
+    width: 100%;
+    height: 100%;
+    background: url("img/fundo.jpg");
+    background-size: cover;
+    opacity: 70%;
+    position: absolute;
+    transition: all .3s linear;
+    border-radius: 5px;
+    border: 1px rgb(39, 56, 150) solid;
+    box-shadow: 0px 0px 10px rgba(39, 56, 150, 0.5);
+    z-index: 3;
+}
+
+.menu label:hover {
+    opacity: 95%;
+}
+  
+#check {
+    position: absolute;
+    z-index: 1;
+    display: none;
+}
+  
+span b{
+    top: 265px;
+    left: 5px;
+    position: absolute;
+    color:rgb(39, 56, 150);
+    font-size: 20px;
+    transition: all .3s linear;
+}
+
+span {
+    opacity: 0%;
+    transition: all .3s linear;
+    z-index: 1;
+}
+
+#check:checked ~ span b{
+    left: 380px;
+    transform: rotateY(180deg);
+}
+
+#check:checked ~ span {
+    opacity: 100%;
+}
+  
+#check:checked ~ label{
+    width: 400px;
+}
+
 /* inicio menu responsivo
 @media(max-width:800px){
     .scroll {
