--- a/style.css
+++ b/style.css
@@ -9,7 +9,6 @@ body {
 .bloco {
     width: 100%;
     height: 90px;
-    margin-top: -150px;
     border: 1px rgb(39, 56, 150) solid;
     background: url("img/fundo.jpg");
     background-size: cover;
@@ -17,7 +16,6 @@ body {
     font-size: 13px;
     font-family: "Cooper Black";
     border-radius: 3px;
-    position: fixed;
 }
 
 .logo {
@@ -30,38 +28,19 @@ body {
 	width: 90%;
 	margin : 0px auto;
     margin-top: 15px;
+    text-align: center;
 }
 
 #navbar-example {
-    margin-top: 30px;
+    margin-top: -130px;
     width: 370px;
-    left: 5px;
+    left: 15px;
     justify-content: space-evenly;
     border-radius: 3px;
     position: fixed;
     z-index: 20;
+    opacity: 70%;
 }
-
-@mixin list-group-item-variant($state, $background, $color) {
-    .list-group-item-#{$background} {
-      color: $red;
-      background-color: $red;
-  
-      &.list-group-item-action {
-        &:hover,
-        &:focus {
-          color: $white;
-          background-color: $rgb(39, 56, 150);
-        }
-  
-        &.active {
-          color: $white;
-          background-color: $rgb(39, 56, 150);
-          border-color: $none;
-        }
-      }
-    }
-  }
 
 .list-group {
     text-align: center;
@@ -71,34 +50,40 @@ h4 {
     text-align: center;
 }
 
-.textScroll {
-    margin-top: 150px;
-}
-
 .topo {
-    width: 50px;
-    height: 50px;
+    width: 30px;
+    height: 30px;
     border-radius: 3px;
     background:rgb(0, 165, 255);
     position: fixed;
     bottom: 20px;
     right: 20px;
     text-align: center;
-    color:rgb(248, 249, 250);
-    font-size: 40px;
     opacity: 30%;
     transition: 0.5s;
+    box-shadow: 0px 5px 10px rgba(39, 56, 150, 0.9);
 }
 
 .topo:hover {
     opacity: 100%;
+    width: 34px;
+    height: 34px;
+    right: 18px;
+    bottom: 28px;
+    box-shadow: 0px 10px 10px rgba(39, 56, 150, 0.9);
+}
+
+button {
+    background: none;
+    border: none;
+    color:rgb(39, 56, 150);
 }
 
 /* Menu */
 .menu {
-    width: 20px;
-    height: 530px;
-    margin-top: -60px;
+    width: 30px;
+    height: 30px;
+    margin-top: 160px;
     position: relative;
     float: left;
     position: fixed;
@@ -107,19 +92,22 @@ h4 {
 .menu label {
     width: 100%;
     height: 100%;
-    background: url("img/fundo.jpg");
+    background: url("img/fundo1.jpg");
     background-size: cover;
     opacity: 70%;
     position: absolute;
     transition: all .3s linear;
     border-radius: 5px;
     border: 1px rgb(39, 56, 150) solid;
-    box-shadow: 0px 0px 10px rgba(39, 56, 150, 0.5);
+    box-shadow: 0px 5px 10px rgba(39, 56, 150, 0.7);
     z-index: 3;
 }
 
 .menu label:hover {
     opacity: 95%;
+    width: 34px;
+    height: 34px;
+    box-shadow: 1px 15px 10px rgba(39, 56, 150, 0.7);
 }
   
 #check {
@@ -129,7 +117,7 @@ h4 {
 }
   
 span b{
-    top: 265px;
+    top: 0px;
     left: 5px;
     position: absolute;
     color:rgb(39, 56, 150);
@@ -138,31 +126,35 @@ span b{
 }
 
 span {
+    pointer-events: none;
     opacity: 0%;
     transition: all .3s linear;
     z-index: 1;
 }
 
 #check:checked ~ span b{
-    left: 380px;
+    left: 390px;
     transform: rotateY(180deg);
 }
 
 #check:checked ~ span {
+    pointer-events: fill;
     opacity: 100%;
 }
   
 #check:checked ~ label{
-    width: 400px;
+    width: 410px;
+    height: 320px;
+    margin-top: -150px;
+    background: url("img/fundo.jpg");
+    background-size: cover;
 }
 
-/* inicio menu responsivo
-@media(max-width:800px){
-    .scroll {
-       width: 100%;
+/* inicio menu responsivo */
+@media screen and (max-width:800px){
+    iframe {
+        margin-left: 0px;
+        width: 100%;
+        height: 250px;
     }
-    nav {
-        justify-content: space-evenly;
-        border: 1px black solid;
-    }
- }*/
+ }
