--- a/style.css
+++ b/style.css
@@ -1,27 +1,57 @@
 * {
-    color:rgb(39, 56, 150);
+	font-family: Times New Roman;
+    color: white;
 }
 
-body {
-    position: relative;
+img {
+    width: 80px;
+    margin-left: 15px;
+}
+
+h1 {
+    margin: 0px 10px 0px 0px;
+    font-size: 32px;
+    float: right;
 }
 
 .bloco {
+    padding: 10% 0% 10% 0%;
     width: 100%;
-    height: 90px;
-    border: 1px rgb(39, 56, 150) solid;
-    background: url("img/fundo.jpg");
-    background-size: cover;
-    box-shadow: 0px 0px 10px rgba(39, 56, 150, 0.5);
-    font-size: 13px;
-    font-family: "Cooper Black";
-    border-radius: 3px;
+    height: 100%;
+}
+
+.bloco2 {
+    margin-top: 10%;
+    background: blue;
+}
+
+.bloco3 {
+    margin-top: 10%;
+    background: white;
+}
+
+.bloco4 {
+    margin-top: 10%;
+    background: pink;
+}
+
+.text {
+    
+    padding: 0% 3% 0% 3%;
+    text-align: center;
+    background: rgb(4, 52, 92);
+    font-size: 26px;
+    border-radius: 15px;
+    box-shadow: 0px 0px 15px rgba(4, 52, 92, 0.5);
 }
 
 .logo {
-    width: 130px;
-	margin: 0px auto;
-    text-align: center;
+    width: 410px;
+    margin-left: 10px;
+}
+
+span {    
+    text-decoration: none;
 }
 
 .main {
@@ -30,138 +60,16 @@ body {
     margin-top: 15px;
     text-align: center;
 }
-
-.scrollspy-example {
-    width: 100%;
-}
-
-#navbar-example {
-    margin-top: -130px;
-    width: 370px;
-    left: 15px;
-    justify-content: space-evenly;
-    border-radius: 3px;
-    position: fixed;
-    z-index: 20;
-    opacity: 70%;
-}
-
-.list-group {
-    text-align: center;
-}
-
-h4 {
-    text-align: center;
-}
-
-.topo {
-    width: 30px;
-    height: 30px;
-    border-radius: 3px;
-    background:rgb(0, 165, 255);
-    position: fixed;
-    bottom: 20px;
-    right: 20px;
-    text-align: center;
-    opacity: 30%;
-    transition: 0.5s;
-    box-shadow: 0px 5px 10px rgba(39, 56, 150, 0.9);
-}
-
-.topo:hover {
-    opacity: 100%;
-    width: 34px;
-    height: 34px;
-    right: 18px;
-    bottom: 28px;
-    box-shadow: 0px 10px 10px rgba(39, 56, 150, 0.9);
-}
-
-button {
-    background: none;
-    border: none;
-    color:rgb(39, 56, 150);
-}
-
-/* Menu */
-.menu {
-    width: 30px;
-    height: 30px;
-    margin-top: 160px;
-    position: relative;
-    float: left;
-    position: fixed;
-}
-  
-.menu label {
-    width: 100%;
-    height: 100%;
-    background: url("img/fundo1.jpg");
-    background-size: cover;
-    opacity: 70%;
-    position: absolute;
-    transition: all .3s linear;
-    border-radius: 5px;
-    border: 1px rgb(39, 56, 150) solid;
-    box-shadow: 0px 5px 10px rgba(39, 56, 150, 0.7);
-    z-index: 3;
-}
-
-.menu label:hover {
-    opacity: 95%;
-    width: 34px;
-    height: 34px;
-    box-shadow: 1px 15px 10px rgba(39, 56, 150, 0.7);
-}
-  
-#check {
-    position: absolute;
-    z-index: 1;
-    display: none;
-}
-  
-span b{
-    top: 0px;
-    left: 5px;
-    position: absolute;
-    color:rgb(39, 56, 150);
-    font-size: 20px;
-    transition: all .3s linear;
-}
-
-span {
-    pointer-events: none;
-    opacity: 0%;
-    transition: all .3s linear;
-    z-index: 1;
-}
-
-#check:checked ~ span b{
-    left: 390px;
-    transform: rotateY(180deg);
-}
-
-#check:checked ~ span {
-    pointer-events: fill;
-    opacity: 100%;
-}
-  
-#check:checked ~ label{
-    width: 410px;
-    height: 320px;
-    margin-top: -150px;
-    background: url("img/fundo.jpg");
-    background-size: cover;
-}
-
 .cartaoVisita {
     width: 410px;
     height: 320px;
     margin: 0px auto;
 }
 
-.text {
-    text-shadow: 0px 0px 15px rgba(0, 165, 255, 0.5);
+iframe {
+    border-radius: 15px;
+    width: 560px;
+    height: 300px;
 }
 
 /* inicio menu responsivo */
