--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 * {
 	font-family: Times New Roman;
-    color: white;
+    color: blue;
 }
 
 img {
     width: 80px;
-    margin-left: 15px;
+    margin-left: 5px;
 }
 
 h1 {
@@ -16,8 +16,11 @@ h1 {
 
 .bloco {
     padding: 10% 0% 10% 0%;
-    width: 100%;
-    height: 100%;
+    width: 80%;
+    height: 80%;
+    margin: 0px auto;
+    background: url("img/fundo.png");
+    background-size: cover;
 }
 
 .bloco2 {
@@ -39,14 +42,11 @@ h1 {
     
     padding: 0% 3% 0% 3%;
     text-align: center;
-    background: rgb(4, 52, 92);
     font-size: 26px;
-    border-radius: 15px;
-    box-shadow: 0px 0px 15px rgba(4, 52, 92, 0.5);
 }
 
 .logo {
-    width: 410px;
+    width: 430px;
     margin-left: 10px;
 }
 
@@ -70,6 +70,7 @@ iframe {
     border-radius: 15px;
     width: 560px;
     height: 300px;
+    box-shadow: 0px 8px 15px rgba(4, 52, 92, 0.5);
 }
 
 /* inicio menu responsivo */
