--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 * {
 	font-family: Times New Roman;
-    color: blue;
+    color: darkblue;
 }
 
 img {
@@ -16,9 +16,8 @@ h1 {
 
 .bloco {
     padding: 10% 0% 10% 0%;
-    width: 80%;
-    height: 80%;
-    margin: 0px auto;
+    width: 100%;
+    height: 100%;
     background: url("img/fundo.png");
     background-size: cover;
 }
@@ -39,10 +38,12 @@ h1 {
 }
 
 .text {
-    
     padding: 0% 3% 0% 3%;
     text-align: center;
+    margin: 0px auto;
+    width: 80%;
     font-size: 26px;
+    text-shadow: 0px 0px 15px rgba(0, 0, 0, 1);
 }
 
 .logo {
