--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@
     left: 48%;
     transform: rotate(-1.5deg);
     z-index: 1;
+    border: none;
 }
 
 .logo img {
@@ -36,6 +37,16 @@ h1 {
     background-size: cover;
 }
 
+.bloco1 {
+    padding: 5% 3% 5% 3%;
+    text-align: center;
+    margin-top: 8%;
+    background: rgb(0, 165, 255);
+    border-radius: 15px;
+    font-size: 26px;
+    box-shadow: 0px 0px 15px rgba(4, 52, 92, 0.5);
+}
+
 .text {
     padding: 0% 3% 0% 3%;
     text-align: center;
@@ -44,14 +55,68 @@ h1 {
     font-size: 26px;
 }
 
-.text1 {
-    padding: 5% 3% 5% 3%;
-    text-align: center;
-    margin: 0px auto;
-    margin-top: 8%;
-    background: rgb(0, 165, 255);
-    font-size: 26px;
+.txt1 {
+    width: 55%;
+}
+
+img {
+    border: 1px dashed darkblue;
+    border-radius: 15px;
+}
+
+.img {
+    border: none;
+}
+
+.img1 {
+    float: right;
+    margin-top: -420px;
+    border-radius: 15px;
+}
+
+.img2 {
+    width: 80px;
+    height: 80px;
+    background: url("img/2.2.png");
+    background-size: cover;
+    border-top-left-radius: 15px;
+    border-bottom-right-radius: 15px;
+}
+
+.img3 {
+    width: 80px;
+    height: 80px;
+    background: url("img/3.1.png");
+    background-size: cover;
+    border-top-left-radius: 15px;
+    border-bottom-right-radius: 15px;
+}
+
+.cardDepoFrame {
+    height: 550px;
+    margin-top: 20px;
+    background: rgb(234, 250, 255);
+    border-radius: 15px;
+    border: 1px solid darkblue;
     box-shadow: 0px 0px 15px rgba(4, 52, 92, 0.5);
+}
+
+.card {
+    margin-top: -536px;
+    width: 250px;
+    padding: 5px 0px 5px 5px;
+    float: left;
+    background: rgb(4, 52, 92);
+    border-top-left-radius: 15px;
+    border-bottom-right-radius: 15px;
+    box-shadow: 0px 0px 5px rgba(4, 52, 92, 0.5);
+}
+
+.title {
+    float: right;
+    margin-top: -55px;
+    color:rgb(0, 165, 255);
+    padding-right: 5px;
 }
 
 .logo {
@@ -74,28 +139,28 @@ span {
     margin-top: 15px;
     text-align: center;
 }
-.cartaoVisita {
-    width: 410px;
-    height: 320px;
-    margin: 0px auto;
-}
 
 iframe {
+    margin-top: 100px;
     border-radius: 15px;
-    width: 560px;
-    height: 300px;
     box-shadow: 0px 8px 15px rgba(4, 52, 92, 0.5);
 }
 
+
 /* inicio menu responsivo */
-@media(max-width:800px){
+@media only screen and (max-width:800px){
     iframe {
         margin-left: 0px;
         width: 100%;
         height: 250px;
     }
-    
-    .logo {
-        margin: 0px auto;
+
+    .txt1 {
+        width: 100%;
+    }
+
+    .img1 {
+        float: none;
+        margin-top: 0px;
     }
  }
